<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10sp" >
            
            <TextView 
                android:id="@+id/textAboutVersion"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/app_version_name"/>
            
            <TextView 
                android:id="@+id/textAboutDevelopmentHeader"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_marginTop="5sp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/development_header"/>
            <TextView 
                android:id="@+id/textAboutDevelopment"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:textSize="14sp"
                android:autoLink="web"
                android:text="@string/development_text"/>
            <TextView 
                android:id="@+id/textAboutFeedback"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:textSize="14sp"
                android:autoLink="email"
                android:text="@string/feedback_text"/>
            
            <TextView 
                android:id="@+id/textAboutCommunityUseHeader"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_marginTop="5sp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/community_use_header"/>
            
            <TextView 
                android:id="@+id/textAboutCommunityUse"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:textSize="14sp"
                android:text="@string/community_use_clause"/>
     
            
        </LinearLayout>
    </ScrollView>
