<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >
        		
        <TextView
            android:id="@+id/spellPreparedHeader"
            android:layout_width="@dimen/spell_prepared_width"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/spellbook_prepared"/>
        
        <TextView android:id="@+id/levelText"
        android:layout_width="@dimen/spell_level_width"
        android:layout_height="fill_parent"
        android:text="@string/Lv"
        android:gravity="center"/>
                
        <TextView
            android:id="@+id/nameHeader"
            android:layout_width="@dimen/spell_name_width"
            android:layout_height="fill_parent"
            android:gravity="left|center_vertical"
            android:text="@string/spellbook_name"/>
        
         <Button
            android:id="@+id/addSpell"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/spellbook_add_spell_button" />
         
    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="3dip"
        android:background="#FF909090" />
    
    <ListView
        android:id="@+id/spells"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"/>    

</LinearLayout>