<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <EditText
        android:id="@+id/spellName"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dialog_name_height"
        android:hint="@string/spell_name_header"
        android:maxLines="2" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/Lv"
            android:gravity="right|center_vertical"/>
        <Spinner
            android:id="@+id/spellLevel"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.3"
            android:padding="5dp" />
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/spellbook_prepared"
            android:gravity="right|center_vertical"/>
        <Spinner
            android:id="@+id/spellPrepared"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.3"
            android:padding="5dp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <EditText
            android:id="@+id/spellDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:hint="@string/spellbook_description" />
    </LinearLayout>


</LinearLayout>