<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <EditText
        android:id="@+id/etDialogItemName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inventory_name_header"
        android:maxLines="2" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventory_quantity_full"/>
        <EditText
            android:id="@+id/etDialogItemQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
             android:layout_weight="0.3"
            android:padding="5dp"
            android:inputType="numberDecimal" />
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventory_weight_full"/>
        <EditText
            android:id="@+id/etDialogItemWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:padding="5dp"
            android:inputType="numberDecimal" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventory_contained_full"/>
        <CheckBox
            android:id="@+id/checkboxDialogItemContained" 
            android:layout_width="wrap_content"
       		android:layout_height="wrap_content"
       		android:text=""
       		/>
    </LinearLayout>

</LinearLayout>